// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Bar renders correctly at desktop breakpoint 1`] = `
<div>
  <div
    class="ui desktop-navbar menu"
  >
    <a
      class="brand-logo-link"
      href="/"
    >
      <div
        class="item brand-logo-container"
      >
        <img
          class="ui small image"
          src="brand_logo.png"
        />
      </div>
    </a>
    <a
      aria-current="page"
      class="active"
      href="/"
    >
      <div
        class="item"
      >
        <i
          aria-hidden="true"
          class="file alternate outline icon"
        />
        All Databases
      </div>
    </a>
    <a
      href="/todos"
    >
      <div
        class="item"
      >
        <i
          aria-hidden="true"
          class="calendar check outline icon"
        />
        Todo List
      </div>
    </a>
    <div
      class="right menu"
    >
      <a
        href="/contribute"
      >
        <div
          class="item"
        >
          Contribute
        </div>
      </a>
      <a
        href="/login"
      >
        <div
          class="item"
        >
          Login
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Navigation Bar renders correctly at mobile breakpoint 1`] = `
<div>
  <div
    class="ui menu"
  >
    <a
      class="item"
    >
      <i
        aria-hidden="true"
        class="bars icon"
      />
    </a>
  </div>
  <div
    class="ui vertical ui overlay left sidebar mobile-navbar menu"
  >
    <a
      href="/database/root"
    >
      <div
        class="item"
      >
        <i
          aria-hidden="true"
          class="file alternate outline icon"
        />
        All Databases
      </div>
    </a>
    <a
      href="/todos"
    >
      <div
        class="item"
      >
        <i
          aria-hidden="true"
          class="calendar check outline icon"
        />
        Todo List
      </div>
    </a>
    <a
      href="/contribute"
    >
      <div
        class="item"
      >
        Contribute
      </div>
    </a>
    <a
      href="/login"
    >
      <div
        class="item"
      >
        Login
      </div>
    </a>
  </div>
</div>
`;
